implementacion busqueda de pacientes por medio de filtros documento, nombres y apellidos

--- a/ClinicaBase/Views/Home/Index.cshtml
+++ b/ClinicaBase/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
                 <img src="~/img/editar-info.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title mb-2">Información del Paciente</h5>
-                    <a href="#" class="btn btn-primary">Gestionar Información</a>
+                    <a asp-controller="Paciente" asp-action="BuscarPaciente" class="btn btn-primary">Gestionar Información</a>
                 </div>
             </div>
 
