permite actualizar la información básica del paciente para usuarios con rol Admin, Medico, Enfermeria

--- a/ClinicaBase/Views/Home/Index.cshtml
+++ b/ClinicaBase/Views/Home/Index.cshtml
@@ -13,11 +13,24 @@
         {
             if (Model.Succeed == 1)
             {
-                <div class="alert alert-success alert-dismissible fade show" role="alert">
-                    @Model.Message
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                <div class="container">
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        @Model.Message
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
                 </div>
+                
+            }
 
+            if (Model.Succeed == 0)
+            {
+                <div class="container">
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        @Model.Message
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                </div>
+                
             }
         }
     }
