se implementa la vista de controles del paciente con su respectiva tabla

--- a/ClinicaBase/Views/Auth/Login.cshtml
+++ b/ClinicaBase/Views/Auth/Login.cshtml
@@ -49,7 +49,7 @@
                 }
 
                 <div class="mb-3">
-                    <a asp-controller="Auth" asp-action="Register" class="btn btn-success">Registrarme</a>
+                    @*<a asp-controller="Auth" asp-action="Register" class="btn btn-success">Registrarme</a>*@
                     <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
                 </div>
                 
