--- a/ClinicaBase/Views/Paciente/BuscarPaciente.cshtml
+++ b/ClinicaBase/Views/Paciente/BuscarPaciente.cshtml
@@ -87,7 +87,7 @@
                                             <i class="bi bi-file-medical"></i>
                                         </a>
                                        
-                                        <a class="btn btn-secondary">                                           
+                                        <a asp-action="Controles" asp-route-documento="@paciente.Documento" class="btn btn-secondary">                                           
                                             <i class="bi bi-eye"></i>
                                         </a>
                                     }
