Se agrega la funcionalidad eliminar usuario para los roles Admin y Recursos Humanos, realmente no elimina al usuario, solo lo desactiva

--- a/ClinicaBase/Views/Usuario/Index.cshtml
+++ b/ClinicaBase/Views/Usuario/Index.cshtml
@@ -12,6 +12,31 @@
             <h1>Usuarios</h1>
         </div>
 
+        @{
+            if (Model != null)
+            {
+                if (Model.Mensaje != null)
+                {
+                    <div class="mb-3 text-start">
+                        @if (Model.Exitoso == 0)
+                        {
+                            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                @Model.Mensaje
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                            </div>
+                        }
+                        else if (Model.Exitoso == 1)
+                        {
+                            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                                @Model.Mensaje
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                            </div>
+                        }
+                    </div>
+                }                 
+            }
+        }
+
         <div class="">
             <table class="table">
                 <thead>
@@ -21,6 +46,7 @@
                         <th>Apellidos</th>
                         <th>Correo</th>
                         <th>Telefono</th>
+                        <th>Rol</th>
                         <th></th>
                     </tr>
                 </thead>
@@ -39,9 +65,13 @@
                                         <td>@usuario.Apellidos</td>
                                         <td>@usuario.Correo</td>
                                         <td>@usuario.Telefono</td>
+                                        <td>@usuario.Rol</td>
                                         <td>
                                             <button class="btn btn-primary">Editar</button>
-                                            <button class="btn btn-danger">Eliminar</button>
+                                            <a asp-action="Eliminar" asp-route-documento="@usuario.Documento" class="btn btn-danger">
+                                                Eliminar
+                                            </a>
+                                            
                                         </td>                                                                               
                                     </tr>                                
                                 }                                
@@ -51,5 +81,26 @@
                 }
             </table>
         </div>
-    </div>
+    </div>    
 </div>
+
+<!-- PARA PASAR INFO AL MODAL -->
+@*@section Scripts{
+    <script>
+        $(document).on("click", "#btnModal", function () {
+            var documento = $(this).data('documento');
+
+            $('#doc').val(documento);
+        })
+    </script>
+
+    <script>
+        function ObtenerDocumento(){
+            var documento = $("#doc").val();
+            console.log(documento);
+            console.log(documento);
+            return documento;
+        }
+    </script>
+    
+}*@
