Se corrige autenticación y registro de nuevos usuarios basada en usuarios desactivados-eliminados

--- a/ClinicaBase/Views/Usuario/Index.cshtml
+++ b/ClinicaBase/Views/Usuario/Index.cshtml
@@ -37,6 +37,10 @@
             }
         }
 
+        <div class="mb-3">
+            <a asp-controller="Auth" asp-action="Register" class="btn btn-success">Agregar nuevo usuario</a>
+        </div>
+
         <div class="">
             <table class="table">
                 <thead>
