--- a/ClinicaBase/Views/Auth/Register.cshtml
+++ b/ClinicaBase/Views/Auth/Register.cshtml
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class="mb-3">
-                    <a asp-controller="Auth" asp-action="Login" class="btn btn-success">Ir a Login</a>
+                    <a asp-controller="Usuario" asp-action="Index" class="btn btn-secondary">Regresar</a>
                     <button asp-action="Register" type="submit" class="btn btn-primary">Registrar</button>
                 </div>
             </form>
